# magmsforEZprediction

./: .gitignore  LeftHemis_val_ALL_modality_Comb_MR0.xlsx  LeftHemis_val_ALL_modality_Comb_MR0_corr.xlsx  LeftHemis_val_ALL_modality_Comb_MR1_corr.xlsx  LeftHemis_val_ALL_modality_Comb_SF.xlsx  LeftHemis_val_ALL_modality_Comb_SF_corr.xlsx  LeftHemis_val_ALL_modality_Comb_SR.xlsx  LeftHemis_val_ALL_modality_Comb_SR_corr.xlsx  LeftHemis_val_FULL_modality_Only_Part_2.xlsx  LeftHemis_val_Full_Modality_No_Dist.xlsx  LeftHemis_val_Probs_Full_Modality.xlsx  LeftHemis_val_Probs_T1_T2_FLAIR.xlsx  LeftHemis_val_Probs_T1_T2_FLAIR_DWI.xlsx  LeftHemis_val_Probs_T1_T2_FLAIR_DWIC.xlsx  LeftHemis_val_T1_T2_FLAIR.xlsx  LeftHemis_val_T1_T2_FLAIR_DWI.xlsx  LeftHemis_val_T1_T2_FLAIR_DWIC.xlsx  LeftHemis_val_T1_T2_FLAIR_DWIC_No_Dist.xlsx  LeftHemis_val_T1_T2_FLAIR_DWI_No_Dist.xlsx  LeftHemis_val_T1_T2_FLAIR_No_Dist.xlsx  LeftTemp_val_FULL_modality_Only.xlsx  README.md  RightHemis_val_ALL_modality_Comb_MR0_corr.xlsx  RightHemis_val_ALL_modality_Comb_MR1_corr.xlsx  RightHemis_val_ALL_modality_Comb_SF_corr.xlsx  RightHemis_val_ALL_modality_Comb_SR.xlsx  RightHemis_val_ALL_modality_Comb_SR_corr.xlsx  RightHemis_val_FULL_modality_Only_Part_2.xlsx  RightHemis_val_Full_Modality_No_Dist.xlsx  RightHemis_val_Probs_Full_Modality.xlsx  RightHemis_val_Probs_T1_T2_FLAIR.xlsx  RightHemis_val_Probs_T1_T2_FLAIR_DWI.xlsx  RightHemis_val_Probs_T1_T2_FLAIR_DWIC.xlsx  RightHemis_val_T1_T2_FLAIR.xlsx  RightHemis_val_T1_T2_FLAIR_DWI.xlsx  RightHemis_val_T1_T2_FLAIR_DWIC.xlsx  RightHemis_val_T1_T2_FLAIR_No_Dist.xlsx  (+73 more)
(+222 files in other folders)
